test/sema/typeck/trait/generic-assoc-type-impl-tuple-err.out
error: impl method does not match definition in trait.
--> generic-assoc-type-impl-tuple-err.dora:24:5
 | 
 | impl Foo[RangeA, RangeB] for Bar {
 |     fn foo(x: Int64, y: String): (String, Int64) { (y, x) }
       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 | }
 | 
1 error found.
